src/main/kotlin/org/limepepper/gdb/parser/Gdb_Revised.bnf

{
  parserClass="org.limepepper.gdb.parser.GdbParser"
  parserUtilClass="org.limepepper.gdb.parser.GdbParserUtil"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="Gdb"
  psiImplClassSuffix="Impl"
  psiPackage="org.limepepper.gdb.psi"
  psiImplPackage="org.limepepper.gdb.psi.impl"

  elementTypeHolderClass="org.limepepper.gdb.psi.GdbTypes"
  elementTypeClass="org.limepepper.gdb.psi.GdbElementType"
  tokenTypeClass="org.limepepper.gdb.psi.GdbTokenType"

  psiImplUtilClass="org.limepepper.gdb.psi.impl.GdbPsiUtil"

    tokens = [
      WHITESPACE='regexp:(\s+)'
      NEWLINE = 'regexp:(\r\n|\r|\n)'
      COMMENT = "regexp:(#.*)"
      IDENTIFIER = 'regexp:[a-zA-Z_][a-zA-Z0-9_]*'
      VARIABLE = 'regexp:\$[a-zA-Z_][a-zA-Z0-9_]*'
      NUMBER = 'regexp:\d+'
      STRING = 'regexp:"[^"]*"'
      HEX_NUMBER = 'regexp:0x[0-9a-fA-F]+'
      REGISTER = 'regexp:\$[a-zA-Z0-9_]+'

      EQUALS = '='
      COMMA = ','
      LPAREN = '\('
      RPAREN = '\)'
      GREATER = '>'
      LESS = '<'
      ASTERISK = '\*'
      LBRACE = '\{'
      RBRACE = '\}'
      LBRACKET = '\['
      RBRACKET = '\]'
      SEMICOLON = ';'
      COLON = ':'
      DOT = '\.'
      ARROW = '->'
      SCOPE_RESOLUTION = '::'

      // Basic commands (without x, print, p, break, b)
      COMMAND_EXECUTION='regexp:(run|r|start|continue|c|step|s|next|n|finish|until|u|kill|quit|q|detach)'
      COMMAND_BREAKPOINT='regexp:(tbreak|hbreak|thbreak|rbreak|watch|rwatch|awatch|catch|delete|enable|disable|condition)'
      COMMAND_STACK='regexp:(backtrace|bt|frame|f|up|down|select-frame)'
      COMMAND_DATA='regexp:(display|output|printf|call|return|examine|info|i|show|list|l|disassemble|disas)'
      COMMAND_CONFIG='regexp:(set|unset|source|file|exec-file|symbol-file|core-file|target|attach|load)'
      COMMAND_USER='regexp:(define|document|end|if|else|while|loop_break|loop_continue)'

      // Additional tokens
      OPERATOR = 'regexp:(==|!=|<=|>=|<|>|&&|\|\||!|<<|>>|&|\||\^|~|\+|-|\*|/|%)'
      ASSIGNMENT_OP = 'regexp:(=|\+=|-=|\*=|/=)'
      ADDRESS_MARKER = '\*'
      CONDITION_IF = 'if'
      FORMAT_SPEC = 'regexp:([a-zA-Z])'
      BAD_CHARACTER = 'regexp:(.)'
      SET_CMD = 'set'
    ]

}

// Entry point
gdbFile ::= item*

private item ::= statement | comment | blank

// Comments and blank lines
private comment ::= COMMENT
blank ::= WHITESPACE | NEWLINE
private newlines ::= '\n'*

statement ::= assignment | breakpoint | command_block | command_line

// Assignment: various set command patterns
assignment ::= SET_CMD assignment_target assignment_value

// Different types of assignment targets
assignment_target ::=
    variable_assignment_target |
    simple_assignment_target |
    subcommand_assignment_target |
    memory_assignment_target

// Variable assignments: set var $var = value OR set variable $var = value
variable_assignment_target ::= ('var' | 'variable') (VARIABLE | IDENTIFIER) EQUALS

// Simple assignments: set key = value
simple_assignment_target ::= IDENTIFIER EQUALS

// Subcommand assignments: set logging file value
subcommand_assignment_target ::= IDENTIFIER IDENTIFIER?

// Memory assignments: set *(type*)address = value OR set {type}address = value
memory_assignment_target ::=
    ASTERISK LPAREN IDENTIFIER ASTERISK RPAREN (NUMBER | HEX_NUMBER) EQUALS |
    LBRACE IDENTIFIER RBRACE (NUMBER | HEX_NUMBER) EQUALS

// Assignment values
assignment_value ::= value | expression

value ::= VARIABLE | NUMBER | HEX_NUMBER | STRING | IDENTIFIER

// Breakpoint with optional condition
breakpoint ::= ('break' | 'b') IDENTIFIER ( 'if' condition )?

condition ::= expression

expression ::= IDENTIFIER (GREATER | LESS | EQUALS) value

// Block commands
command_block ::= 'commands' NEWLINE command_line* 'end'

// Command line: base command and optional args
command_line ::= command_name arguments?

command_name ::= IDENTIFIER

arguments ::= (value | expression | IDENTIFIER)+
